--- a/styles.css
+++ b/styles.css
@@ -401,7 +401,14 @@ img
 	
 	}
 	
-	
+	.leaderboard{
+	border:2px #673ab7 solid;
+	background-color:#1e1e1e;
+	border-radius:10px;
+	padding: 20px;
+	height: auto;
+ 	width: 89%;
+}
 }
 
 
@@ -437,6 +444,40 @@ img
 /* Ukryte sekcje */
 .hidden {
     display: none;
+}
+
+.leaderboard {
+    margin-top: 20px;
+    padding: 20px;
+    border: 1px solid #673ab7;
+}
+
+#leaderboardTable {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+#leaderboardTable th, #leaderboardTable td {
+    border: 1px solid #673ab7;
+    padding: 8px;
+    text-align: left;
+}
+
+#leaderboardTable th {
+    background-color: #1e1e1e;
+}
+
+#playerNick {
+    padding: 8px;
+    margin-right: 10px;
+background-color: #1e1e1e;
+border: 1px solid #673ab7;
+}
+
+#submitNick {
+    padding: 8px;
+    cursor: pointer;
 }
 
 
