--- a/styles.css
+++ b/styles.css
@@ -471,7 +471,7 @@ img
 #playerNick {
     padding: 8px;
     margin-right: 10px;
-background-color: #1e1e1e;
+background-color: lightgray;
 border: 1px solid #673ab7;
 }
 
