--- a/styles.css
+++ b/styles.css
@@ -469,7 +469,7 @@ img
     background-color: #1e1e1e;
 }
 
-#nickInput {
+#playerNick {
     padding: 8px;
     margin-right: 10px;
 background-color: lightgray;
