--- a/styles.css
+++ b/styles.css
@@ -421,7 +421,8 @@ img
 }
 
 .tab-button {
-    padding: 10px 20px;
+    width:25%;
+    padding: 5px 5px;
     background-color: #673ab7;
     color: white;
     border: none;
